--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
@@ -14,8 +14,10 @@
   "dependencies": {
     "@angular/animations": "^5.2.8",
     "@angular/cdk": "^5.2.4",
+    "@angular/cli": "~1.7.2",
     "@angular/common": "^5.2.0",
     "@angular/compiler": "^5.2.0",
+    "@angular/compiler-cli": "^5.2.0",
     "@angular/core": "^5.2.0",
     "@angular/flex-layout": "^5.0.0-beta.14",
     "@angular/forms": "^5.2.0",
@@ -25,10 +27,14 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "core-js": "^2.4.1",
+    "enhanced-resolve": "^4.0.0",
+    "express": "^4.16.3",
     "jsonwebtoken": "^8.2.1",
     "moment": "^2.22.0",
     "particles.js": "^2.0.0",
+    "path": "^0.12.7",
     "rxjs": "^5.5.6",
+    "typescript": "~2.5.3",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
@@ -50,5 +56,9 @@
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
     "typescript": "~2.5.3"
+  },
+  "engines": {
+    "node": "8.10.0",
+    "yarn": "1.5.1"
   }
 }
