--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@ngx-loading-bar/http-client": "^2.0.0",
     "core-js": "^2.4.1",
     "enhanced-resolve": "^4.0.0",
     "express": "^4.16.3",
