--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express": "^4.16.3",
     "jsonwebtoken": "^8.2.1",
     "moment": "^2.22.0",
+    "ngx-mask": "^2.9.3",
     "particles.js": "^2.0.0",
     "path": "^0.12.7",
     "rxjs": "^5.5.6",
